writing new intro on revision

--- a/log.rmd
+++ b/log.rmd
@@ -475,3 +475,9 @@ or
 - started writing reply_to_reviews.md
 - there are 36 double-spaced pages of content (39 including references). About 6 of these are figures/tables/images. So at 6 pages/day revisions, it would take about 5 days. Starting tomorrow 13 July, that would be 13, 14, 17, 18, 19 July working on the pages.  Entering the edits would take another 5 days (20, 21, 24, 25, 26). That assumes not major obstacles. So submission could be before end of July. 
 - I'm not I can satisfy R2 in their desires for empirical, or sociological rigour. I'm drawn much more to the idea of reconstructing an encounter with a system, where reconstruction is a pragmatist/Dewey-oriented attempt to change our relation to experience. This includes a form of technical practice working with data and models, very much in the way of the actual recommender system.  
+
+## Thu 13 Jul 2017 15:29:02 BST
+- starting revisions by going through ref2; 
+- philosophico-methodological preramble:
+
+> This paper is a philosophical reconstruction [@Dewey_2017] of an online grocery ordering system. The reconstruction is empirical in certain respects. It departs from an ethnographic moment: being a member of the audience at an industry/academic conference where a data scientist was describing the system. It is experimental in reconstructing, using widely available code resources resources such as API (Application Programmer Interfaces) and software libraries for machine learning, some important elements of the system in question. It is archaeological in the sense developed by Michel Foucault in that it seeks to identify and investigate the practices of knowing, of operating, ordering and enunciating associated with the system as it takes shape over time. Like some recent work in science and technology studies and anthropology [@Marres_2017; @Rabinow_2004], the paper itself provisionally enacts a mode of relating to the problem it addresses. At times, this mode of empirical philosophical engagement with its objects may well seem overly concerned with the technical minutiae of the grocery ordering system and its recommendation, and lacking in empirical sociological rigour. With some forbearance on the part of readers, however, the main philosophical argument of the paper, should resonate sociologically. It concerns social order, or the consistency and regularity of relating and acting amid a world in where probabilities and calculations based on probabilities play a more pervasive role.
