writing main argument for it

--- a/log.rmd
+++ b/log.rmd
@@ -478,6 +478,14 @@ or
 
 ## Thu 13 Jul 2017 15:29:02 BST
 - starting revisions by going through ref2; 
-- philosophico-methodological preramble:
+- philosophico-methodological preramble: TODO: put this as opening paragraph
 
-> This paper is a philosophical reconstruction [@Dewey_2017] of an online grocery ordering system. The reconstruction is empirical in certain respects. It departs from an ethnographic moment: being a member of the audience at an industry/academic conference where a data scientist was describing the system. It is experimental in reconstructing, using widely available code resources resources such as API (Application Programmer Interfaces) and software libraries for machine learning, some important elements of the system in question. It is archaeological in the sense developed by Michel Foucault in that it seeks to identify and investigate the practices of knowing, of operating, ordering and enunciating associated with the system as it takes shape over time. Like some recent work in science and technology studies and anthropology [@Marres_2017; @Rabinow_2004], the paper itself provisionally enacts a mode of relating to the problem it addresses. At times, this mode of empirical philosophical engagement with its objects may well seem overly concerned with the technical minutiae of the grocery ordering system and its recommendation, and lacking in empirical sociological rigour. With some forbearance on the part of readers, however, the main philosophical argument of the paper, should resonate sociologically. It concerns social order, or the consistency and regularity of relating and acting amid a world in where probabilities and calculations based on probabilities play a more pervasive role.
+> This paper is a philosophical reconstruction [@Dewey_2017] of an online grocery ordering system. The reconstruction is empirical in certain respects. It departs from an ethnographic moment: being a member of the audience at an industry/academic conference where a data scientist was describing how recommendations were created for online grocery orders. It draws on anthropological and sociological research concerning shopping and lists. It is experimental in reconstructing, using widely available code resources resources such as API (Application Programmer Interfaces) and software libraries for machine learning, some important elements of the system in question. It is archaeological in the sense developed by Michel Foucault in that it seeks to identify and investigate the practices of knowing, of operating, ordering and enunciating associated with the system as it takes shape over time. Not least, draws on philosophy of science and media theory to frame its engagement with data, algorithms and predictions. Like some recent work in science and technology studies and anthropology [@Marres_2017; @Rabinow_2004], through this combination of approaches the paper itself provisionally allows its own reconstruction to be shaped by  the object it describes. At times, this mode of empirical philosophical engagement with its objects may well seem overly concerned with the technical minutiae of the grocery ordering system and its recommendations, and lacking in empirical sociological rigour. With some forbearance on the part of readers, however, the main philosophical argument of the paper, should resonate sociologically. It concerns social order, or the consistency and regularity of relating and acting amid a world in where probabilities and calculations based on probabilities play a more pervasive role.
+
+## Fri 14 Jul 2017 11:30:07 BST
+- read popper on propensities again, updated notes in ~/notes/popper_propensities.md, and also marked up the paper copy more;  
+- TODO: for methods add sandvig on audit [@Sandvig_2015a]
+
+> The main argument of the paper concerns the operational role of probability in Big Data situations. While calculations of probability have  long-standing importance in many settings (insurance, medicine, experimental and field sciences, operations research, risk analysis, engineering design, public health,  economic modelling, etc.), probabilities have taken on a much thicker situational texture. Operational probabilities differ from epistemic probabilities in their position in the world, as part of infrastructures, transactions, and event-structures. Taking their complex siting into account, and accepting their _physical_ reality, we might come to understand the world they belong to as what the philosopher of science Karl Popper understood as a 'world of propensities, as an unfolding process of realizing possibilities and of unfolding new possibilities' [@Popper_1990,19]. 
+
+> The broad implication of the argument concerns how we think about social order or regularities: proponents and critics of Big Data present the advent of large volumes of data and analytical techniques ( machine learning in particular) as transforming organisations, institutions, economic processes and social life. I suggest too that a transformation or conversion event is occurring, but one which might open up the possibility of experiencing the world differently, and conceiving of social ordering processes somewhat afresh.  Even if the argument is based on an account of an eminently social practice such as shopping, the analysis of how a world of propensities continuously converting into realizations (or not) applies across the board, from the most physical to the most ideal or abstract settings. The banality of the example here -- grocery shopping -- allows some first hand engagement with the messiness, the entanglements, and potentials of this conversion event in ways that other interesting settings -- particle physics for instance -- do not.
